2011-08-11  Ulrich Drepper  <drepper@gmail.com>

	* intl/l10nflist.c: Allow architecture-specific pop function.
	* sysdeps/x86_64/l10nflist.c: New file.

	* intl/l10nflist.c (_nl_make_l10nflist): Use locale-independent
	classification.

2011-08-10  Andreas Schwab  <schwab@redhat.com>

	* include/dirent.h: Add libc_hidden_proto for scandirat and
	scandirat64.  Don't declare __scandirat64.
	* dirent/scandirat.c: Add libc_hidden_def.
	* dirent/scandirat64.c (SCANDIRAT): Remove underscores.
	* sysdeps/unix/sysv/linux/i386/scandir64.c (SCANDIRAT): Likewise.

2011-08-10  David S. Miller  <davem@davemloft.net>

	* sysdeps/unix/sysv/linux/ia64/sys/ptrace.h: Add missing comma in
	enum.
	* sysdeps/unix/sysv/linux/powerpc/sys/ptrace.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/sys/ptrace.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sys/ptrace.h: Likewise.

2011-08-09  Ulrich Drepper  <drepper@gmail.com>

	* Versions.def [libc]: Add GLIBC_2.15.
	* dirent/Makefile (routines): Add scandirat and scandirat64.
	* dirent/Versions [libc]: Export scandirat and scandirat64 for
	GLIBC_2.15.
	* dirent/dirent.h: Declare scandirat and scandirat64.
	* dirent/scandirat.c: New file.
	* dirent/scandirat64.c: New file.
	* sysdeps/wordsize-64/scandirat.c: New file.
	* sysdeps/wordsize-64/scandirat64.c: New file.
	* dirent/opendir.c: Define opendirat.
	* dirent/scandir.c: Move code to scandirat.c.  Implement scandir
	using scandirat.
	* dirent/scandir64.c: Adjust for scandir.c change.
	* include/dirent.h: Define scandir_cancel_struct.  Declare __opendirat,
	__scandirat64, and __scandir_cancel_handler.
	* sysdeps/unix/opendir.c: Rename __opendir to __opendirat.  Take
	additional parameter and use openat instead of open (outside of ld.so).
	Add new __opendir as wrapper around __opendirat.
	* sysdeps/unix/sysv/linux/i386/scandir64.c: Reimplement __old_scandir64
	here without requiring old scandirat implementation.

2011-08-08  Ulrich Drepper  <drepper@gmail.com>
